# folio

./: .gitignore  AGENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  HANDOFF.md  LICENSE  PLAN.md  README.md  TASKS.md  ia_folio.yaml  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
.opencode/commands/: release.md
benchmark/corpus/golden/: oac-activity_list-01.md  oac-application-01.md  oac-budget-01.md  oac-narrative-01.md  oac-staff_board-01.md  oac-support_letter-01.md
benchmark/corpus/rendered/: oac-activity_list-01.docx  oac-application-01.docx  oac-budget-01.xlsx  oac-staff_board-01.docx
docker/: Dockerfile
docs/: INFO.md  README.md  agent-workflows.md  benchmark.md  config.md  converters.md  corpus.md  file-naming.md  frontmatter.md  getting-started.md  installation.md  pipelines.md  skills.md  wiki-backends.md
docs/design/: validate.md
skills/: README.md
skills/core/: _librarian.md  _tool-agentmap.md  _tool-file-search.md  _tool-sage-wiki.md  _wiki-maintenance.md  archive-search.md  grant-drafting.md  grant-writing-craft.md
skills/templates/: funders.md  organization.md  wiki-agents.md
src/folio/: __init__.py
src/folio/adapters/: __init__.py
src/folio/adapters/converters/: __init__.py  base.py  cascade.py  datalab.py  docling.py  liteparse.py  marker.py  pandoc.py
src/folio/adapters/llm/: __init__.py  base.py  openai_compatible.py
src/folio/adapters/renderers/: __init__.py  base.py  docx.py  pdf.py  xlsx.py
src/folio/adapters/sources/: __init__.py  base.py  dropbox.py  gdrive.py  local.py
src/folio/adapters/wiki/: __init__.py  base.py  null.py  sage_wiki.py
src/folio/cli/: __init__.py  audit.py  canonicalize.py  classify.py  clean.py  convert.py  convert_bench.py  corpus.py  doctor.py  guide.py  ingest.py  init.py  install_agent.py  main.py  pipeline.py  prioritize.py  repack.py  rewrite.py  scan.py  skills.py  teach.py  test_skills.py  validate.py  website.py  wiki.py
src/folio/config/: __init__.py  defaults.yaml  loader.py  schema.py
src/folio/core/: __init__.py  auditor.py  canonicalizer.py  classifier.py  cleaner.py  errors.py  frontmatter.py  ingester.py  init.py  manifest.py  orchestrator.py  pipeline.py  prioritizer.py  repacker.py  rewriter.py  scanner.py  skills.py  throttle.py  validator.py  website.py
src/folio/core/bench/: __init__.py  corpus.py  report.py  runner.py  scorer.py  spec.py
src/folio/core/corpus/: __init__.py  content.py  generator.py  metadata.py  pii_scan.py  spec.py
src/folio/service/: __init__.py
src/folio/templates/bench/: bench-spec.yaml
src/folio/templates/corpus/: corpus-spec.yaml  pii-denylist.yaml
src/folio/templates/packs/arts-org/: README.md  pack.yaml
src/folio/templates/packs/arts-org/prompts/: extract-concepts.md  extract-webpage-concepts.md  summarize-article.md  summarize-paper.md  summarize-webpage.md  write-article.md
src/folio/templates/profiles/: canadian-artist-run-centre.yaml  canadian-dance.yaml  canadian-festival.yaml  canadian-gallery.yaml  canadian-theatre.yaml  generic-canadian-arts.yaml  generic.yaml
src/folio/web/: __init__.py
src/folio/web/routes/: __init__.py
tests/: __init__.py  conftest.py  test_adapters.py  test_auditor.py  test_bench_corpus.py  test_bench_report.py  test_bench_runner.py  test_bench_scorer.py  test_bench_spec.py  test_canonicalizer.py  test_cascade_converter.py  test_classifier.py  test_cleaner.py  test_config.py  test_corpus_content.py  test_corpus_generator.py  test_corpus_metadata.py  test_corpus_pii.py  test_corpus_renderers.py  test_corpus_spec.py  test_frontmatter.py  test_ingester.py  test_init.py  test_language.py  test_orchestrator.py  test_pandoc_converter.py  test_prioritizer.py  test_repacker.py  test_rewriter.py  test_scanner.py  test_skills.py  test_throttle.py  test_validator.py  test_website.py
tests/agent_scenarios/: ia_scenarios.yaml
tests/cli/: test_cli.py  test_convert_bench.py  test_corpus_cli.py
tests/integration/: test_pipeline.py
