[project]
name = "folio"
version = "0.3.0"
description = "Turn an arts organization's document archive into a searchable knowledge base for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ryan Kelln" },
]
keywords = ["grants", "archive", "wiki", "ai", "arts", "markdown", "llm"]

dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
liteparse = ["liteparse"]
datalab = ["datalab-python-sdk"]
marker = ["marker-pdf"]
docling = ["docling"]
web = ["fastapi", "uvicorn"]
gdrive = ["google-api-python-client", "google-auth-httplib2", "google-auth-oauthlib"]
dropbox = ["dropbox"]
# Synthetic PII-free benchmark corpus generation (folio corpus). PDF rendering
# and OCR rasterization additionally rely on external system tools (typst,
# pandoc, exiftool, poppler/pdftoppm) which are NOT pip-installable here.
corpus = [
    "faker>=40",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.0",
    "ruff>=0.8",
    "faker>=40",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "pillow>=10.0",
]

[project.scripts]
folio = "folio.cli.main:main"
folio-pipeline = "folio.cli.pipeline:main"
folio-clean = "folio.cli.clean:main"
folio-classify = "folio.cli.classify:main"
folio-rewrite = "folio.cli.rewrite:main"
folio-prioritize = "folio.cli.prioritize:main"
folio-canonicalize = "folio.cli.canonicalize:main"
folio-ingest = "folio.cli.ingest:main"
folio-audit = "folio.cli.audit:main"
folio-init = "folio.cli.init:main"
folio-scan = "folio.cli.scan:main"
folio-skills = "folio.cli.skills:main"
folio-repack = "folio.cli.repack:main"
folio-test-skills = "folio.cli.test_skills:main"
folio-wiki = "folio.cli.wiki:main"
folio-install-agent = "folio.cli.install_agent:main"
folio-validate = "folio.cli.validate:main"
folio-corpus = "folio.cli.corpus:main"
folio-convert-bench = "folio.cli.convert_bench:main"
folio-website = "folio.cli.website:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"folio.config" = ["*.yaml", "*.yml"]
"folio.templates" = ["**/*.yaml", "**/*.yml", "**/*.md"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # line length: rely on formatter/judgment; long strings & URLs are fine
    "E741",  # ambiguous names (l/I/O): intentional in parser/scoring code
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports: package __init__ surfaces public API
"tests/**" = [
    "F841",  # unused locals in tests (captured return values kept for clarity)
    "N801",  # test classes named after the constant under test (e.g. TestTIER_MAP)
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: tests that take >1s",
    "integration: tests needing IA library or external deps",
    "llm: tests that call LLM APIs",
]

[tool.coverage.run]
source = ["folio"]
omit = [
    "*/web/*",
    "*/service/*",
]

[tool.coverage.report]
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
